--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>Uma casa portuguesa com certeza</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -22,8 +22,28 @@
 <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <”header>
+      <div class="bg">
+        <div class="content">
+          <h1 class="logo ir">Uma casa portuguesa com certeza</h1>
+          <nav>
+            <ul>
+              <li><a href="#"><b>sobre</b><br>o projeto</a></li>
+              <li><a href="#"><b>sobre</b><br>a casa<br>portuguesa</a></li>
+              <li><a href="#"><b>baixe</b><br>o regulamento</a></li>
+              <li><a href="#"><b>coletivos</b><br>convidados</a></li>
+              <li><a href="#"><b>inauguração</b><br>do projeto</a></li>
+              <li><a href="#"><b>fale</b><br>conosco</a></li>
+            </ul>
+          </nav>
+          <div id="instagram-icon"></div>
+        <div>
+      </div>
+    </header>
 
+    <div id="content">
+
+    </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
