--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
 
-    <”header>
+    <header>
       <div class="bg">
         <div class="content">
           <h1 class="logo ir">Uma casa portuguesa com certeza</h1>
