codigo inicial para os conteúdos das tabs e o comportamento

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           <h1 class="logo ir">Uma casa portuguesa com certeza</h1>
           <nav>
             <ul>
-              <li><a href="#"><b>sobre</b><br>o projeto</a></li>
-              <li><a href="#"><b>sobre</b><br>a casa<br>portuguesa</a></li>
-              <li><a href="#"><b>baixe</b><br>o regulamento</a></li>
-              <li><a href="#"><b>coletivos</b><br>convidados</a></li>
-              <li><a href="#"><b>inauguração</b><br>do projeto</a></li>
-              <li><a href="#"><b>fale</b><br>conosco</a></li>
+              <li><a href="#projeto"><b>sobre</b><br>o projeto</a></li>
+              <li><a href="#casa"><b>sobre</b><br>a casa<br>portuguesa</a></li>
+              <li><a href="#regulamento"><b>baixe</b><br>o regulamento</a></li>
+              <li><a href="#coletivos"><b>coletivos</b><br>convidados</a></li>
+              <li><a href="#inauguracao"><b>inauguração</b><br>do projeto</a></li>
+              <li><a href="#contato"><b>fale</b><br>conosco</a></li>
             </ul>
           </nav>
           <div id="instagram-icon"></div>
@@ -42,7 +42,60 @@
     </header>
 
     <div id="content">
-
+      <aside id="projeto">
+        <p>
+          O projeto Uma Casa portuguesa com Certeza foi concebido especialmente para o Ano do Brasil em Portugal e será uma homenagem de brasileiros e portugueses a Portugal! A proposta é produzir correspondências visuais entre fotógrafos brasileiros e portugueses com o tema da 'casa portuguesa'. O projeto soma um Concurso fotográfico e exposições.
+        </p>
+        <p>
+          A participação está aberta a todos os fotógrafos amadores e profissionais que queiram participar, basta ser usuário - ou passar a ser - do Instagram, seguir as regras do jogo e participar do processo de seleção. Serão aceitos participantes residentes no Brasil e em Portugal. Leia ou baixe o regulamento para saber mais.
+        </p>
+      </aside>
+      <aside id="casa">
+        <p>
+          A dita casa portuguesa, naturalmente, vem se reinventando continuamente, seja por estar no Brasil seja por estar em Portugal, mas guarda uma certa matriz que, temos certeza, servirá como o condutor da identidade portuguesa. A casa portuguesa, tomada como tema, pode ser vista de dentro, de fora, e também situada no seu entorno. O que buscamos é estimular uma percepção e/ou uma reflexão sobre o que seria esta casa no imaginário de portugueses e de brasileiros.
+        </p>
+      </aside>
+      <aside id="regulamento">
+      </aside>
+      <aside id="coletivos" class="vcard">
+        <section>
+          <h1>Pangéia de dois</h1>
+          <h2 class="adr"><span class="region">SP</span> - <span class="country">Brasil</span></h1>
+          <p>
+            Pangeia de Dois é um coletivo criativo multimídia que nasceu em 2009 com a parceria dos artistas visuais malu teodoro e vinicius assencio.
+          </p>
+        </section>
+        <section>
+          <h1>O Estendal</h1>
+          <h2>RJ - Brasil</h2>
+          <p>
+            O Estendal é uma ação cultural promovida por um grupo de fazedores de imagens, mais convidados e agregados, que visa levar para as ruas e praças públicas imagens pensantes ou pensamentos imagéticos.
+          </p>
+          <p>
+            Como que brincando de fazer arte, o grupo parte de uma expressão da língua portuguesa para fotografar, ou rebuscar em arquivos, imagens que traduzam o tema de alguma maneira bastante própria e individual.
+          </p>
+          <p>
+            As ideias são literalmente penduradas em varais esticados em espaços de convivência, expostos ao sabor do vento e da degustação dos olhares curiosos de transeuntes afoitos, como um descanso na loucura estressante diária das ruas de grandes cidades.
+          </p>
+        </section>
+        <section>
+          <h1>Kameraphoto</h1>
+          <h2>Portugal</h2>
+          <p>
+            [kameraphoto] é um coletivo de fotógrafos fundado em Janeiro de 2003. It is a structure that brings together different visions of the contemporary Portuguese photography, committed to the creation and production of collective projects. The collective also encourages its members to develop personal projects. The commitment put into collective productions as well as into individual ones makes [kameraphoto] a critical space promoting photography that allows the structure to be diverse in its visions and perceptions of the world as well as in the many forms of expression through photographic means.
+          </p>
+          <p>
+            Alexandre Almeida, Augusto Brázio, Céu Guarda, Guillaume Pazat, João Pina, Jordi Burch, Martim Ramos, Nelson d'Aires, Pauliana Valente Pimentel, Pedro Letria, Sandra Rocha e Valter Vinagre.
+          </p>
+        </section>
+      </aside>
+      <aside id="inauguracao">
+      </aside>
+      <aside id="contato">
+        <p>
+          contato@umacasaportuguesacomcerteza.com
+        </p>
+      </aside>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
