--- a/index.html
+++ b/index.html
@@ -57,36 +57,45 @@
       </aside>
       <aside id="regulamento">
       </aside>
-      <aside id="coletivos" class="vcard">
+      <aside id="coletivos" class="vcard opened">
         <section>
-          <h1>Pangéia de dois</h1>
-          <h2 class="adr"><span class="region">SP</span> - <span class="country">Brasil</span></h1>
-          <p>
-            Pangeia de Dois é um coletivo criativo multimídia que nasceu em 2009 com a parceria dos artistas visuais malu teodoro e vinicius assencio.
-          </p>
+          <img class="foto" src="img/instagram.png" />
+          <div class="content">
+            <h1>Pangéia de dois</h1>
+            <h2 class="adr"><span class="region">SP</span> - <span class="country">Brasil</span></h1>
+            <p>
+              Pangeia de Dois é um coletivo criativo multimídia que nasceu em 2009 com a parceria dos artistas visuais malu teodoro e vinicius assencio.
+            </p>
+          </div>
         </section>
         <section>
-          <h1>O Estendal</h1>
-          <h2>RJ - Brasil</h2>
-          <p>
-            O Estendal é uma ação cultural promovida por um grupo de fazedores de imagens, mais convidados e agregados, que visa levar para as ruas e praças públicas imagens pensantes ou pensamentos imagéticos.
-          </p>
-          <p>
-            Como que brincando de fazer arte, o grupo parte de uma expressão da língua portuguesa para fotografar, ou rebuscar em arquivos, imagens que traduzam o tema de alguma maneira bastante própria e individual.
-          </p>
-          <p>
-            As ideias são literalmente penduradas em varais esticados em espaços de convivência, expostos ao sabor do vento e da degustação dos olhares curiosos de transeuntes afoitos, como um descanso na loucura estressante diária das ruas de grandes cidades.
-          </p>
+          <img class="foto" src="img/instagram.png" />
+          <div class="content">
+            <h1>O Estendal</h1>
+            <h2>RJ - Brasil</h2>
+            <p>
+              O Estendal é uma ação cultural promovida por um grupo de fazedores de imagens, mais convidados e agregados, que visa levar para as ruas e praças públicas imagens pensantes ou pensamentos imagéticos.
+            </p>
+            <p>
+              Como que brincando de fazer arte, o grupo parte de uma expressão da língua portuguesa para fotografar, ou rebuscar em arquivos, imagens que traduzam o tema de alguma maneira bastante própria e individual.
+            </p>
+            <p>
+              As ideias são literalmente penduradas em varais esticados em espaços de convivência, expostos ao sabor do vento e da degustação dos olhares curiosos de transeuntes afoitos, como um descanso na loucura estressante diária das ruas de grandes cidades.
+            </p>
+          </div>
         </section>
         <section>
-          <h1>Kameraphoto</h1>
-          <h2>Portugal</h2>
-          <p>
-            [kameraphoto] é um coletivo de fotógrafos fundado em Janeiro de 2003. It is a structure that brings together different visions of the contemporary Portuguese photography, committed to the creation and production of collective projects. The collective also encourages its members to develop personal projects. The commitment put into collective productions as well as into individual ones makes [kameraphoto] a critical space promoting photography that allows the structure to be diverse in its visions and perceptions of the world as well as in the many forms of expression through photographic means.
-          </p>
-          <p>
-            Alexandre Almeida, Augusto Brázio, Céu Guarda, Guillaume Pazat, João Pina, Jordi Burch, Martim Ramos, Nelson d'Aires, Pauliana Valente Pimentel, Pedro Letria, Sandra Rocha e Valter Vinagre.
-          </p>
+          <img class="foto" src="img/instagram.png" />
+          <div class="content">
+            <h1>Kameraphoto</h1>
+            <h2>Portugal</h2>
+            <p>
+              [kameraphoto] é um coletivo de fotógrafos fundado em Janeiro de 2003. It is a structure that brings together different visions of the contemporary Portuguese photography, committed to the creation and production of collective projects. The collective also encourages its members to develop personal projects. The commitment put into collective productions as well as into individual ones makes [kameraphoto] a critical space promoting photography that allows the structure to be diverse in its visions and perceptions of the world as well as in the many forms of expression through photographic means.
+            </p>
+            <p>
+              Alexandre Almeida, Augusto Brázio, Céu Guarda, Guillaume Pazat, João Pina, Jordi Burch, Martim Ramos, Nelson d'Aires, Pauliana Valente Pimentel, Pedro Letria, Sandra Rocha e Valter Vinagre.
+            </p>
+          </div>
         </section>
       </aside>
       <aside id="inauguracao">
