--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@
     </header>
 
     <div id="content">
+      <div id="contador">
+        <div class="digit">
+          <p class="top-text">faltam</p>
+          <p>2</p><hr>
+        </div>
+        <div class="digit">
+          <p>5</p><hr>
+          <p class="bottom-text">dias</p>
+        </div>
+        <div class="digit">
+          <p>0</p><hr>
+        </div>
+        <div class="digit">
+          <p>9</p><hr>
+          <p class="bottom-text">horas</p>
+        </div>
+      </div>
+      <h2>Como é sua imagem de uma casa portuguesa?</h2>
+      <p>
+        Fotografe com o Instagram e use a tag
+        <span class="tag green">#umacasaportuguesacomcerteza</span> ou
+        <span class="tag red">#casalusa</span> e participe.<br>
+        Sua fotografia pode ser selecionada para participar das exposições e/ou
+        ser premiada.
+      </p>
       <aside id="projeto">
         <p>
           O projeto Uma Casa portuguesa com Certeza foi concebido especialmente para o Ano do Brasil em Portugal e será uma homenagem de brasileiros e portugueses a Portugal! A proposta é produzir correspondências visuais entre fotógrafos brasileiros e portugueses com o tema da 'casa portuguesa'. O projeto soma um Concurso fotográfico e exposições.
@@ -57,7 +82,7 @@
       </aside>
       <aside id="regulamento">
       </aside>
-      <aside id="coletivos" class="vcard opened">
+      <aside id="coletivos" class="vcard">
         <section>
           <img class="foto" src="img/instagram.png" />
           <div class="content">
