--- a/index.html
+++ b/index.html
@@ -42,31 +42,39 @@
     </header>
 
     <div id="content">
-      <div id="contador">
-        <div class="digit">
-          <p class="top-text">faltam</p>
-          <p>2</p><hr>
+      <div id="main">
+        <div id="contador">
+          <div class="digit">
+            <p class="top-text">faltam</p>
+            <p>2</p><hr>
+          </div>
+          <div class="digit">
+            <p>5</p><hr>
+            <p class="bottom-text">dias</p>
+          </div>
+          <div class="digit">
+            <p>0</p><hr>
+          </div>
+          <div class="digit">
+            <p>9</p><hr>
+            <p class="bottom-text">horas</p>
+          </div>
         </div>
-        <div class="digit">
-          <p>5</p><hr>
-          <p class="bottom-text">dias</p>
-        </div>
-        <div class="digit">
-          <p>0</p><hr>
-        </div>
-        <div class="digit">
-          <p>9</p><hr>
-          <p class="bottom-text">horas</p>
-        </div>
+        <h2>Como é sua imagem de uma casa portuguesa?</h2>
+        <p>
+          Fotografe com o Instagram e use a tag
+          <span class="tag green">#umacasaportuguesacomcerteza</span> ou
+          <span class="tag red">#casalusa</span> e participe.<br>
+          Sua fotografia pode ser selecionada para participar das exposições e/ou
+          ser premiada.
+        </p>
       </div>
-      <h2>Como é sua imagem de uma casa portuguesa?</h2>
-      <p>
-        Fotografe com o Instagram e use a tag
-        <span class="tag green">#umacasaportuguesacomcerteza</span> ou
-        <span class="tag red">#casalusa</span> e participe.<br>
-        Sua fotografia pode ser selecionada para participar das exposições e/ou
-        ser premiada.
-      </p>
+      <aside id="share">
+        <ul>
+          <li><a href="#">facebook</a></li>
+          <li><a href="#">twitter</a></li>
+        </ul>
+      </aside>
       <aside id="projeto">
         <p>
           O projeto Uma Casa portuguesa com Certeza foi concebido especialmente para o Ano do Brasil em Portugal e será uma homenagem de brasileiros e portugueses a Portugal! A proposta é produzir correspondências visuais entre fotógrafos brasileiros e portugueses com o tema da 'casa portuguesa'. O projeto soma um Concurso fotográfico e exposições.
@@ -131,6 +139,7 @@
         </p>
       </aside>
     </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
