--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
         </section>
         <section>
-          <img class="foto" src="img/instagram.png" />
+          <div class="foto"></div>
           <div class="content">
             <h1>O Estendal</h1>
             <h2>RJ - Brasil</h2>
@@ -118,7 +118,7 @@
           </div>
         </section>
         <section>
-          <img class="foto" src="img/instagram.png" />
+          <div class="foto"></div>
           <div class="content">
             <h1>Kameraphoto</h1>
             <h2>Portugal</h2>
