--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <ul>
               <li><a href="#projeto"><b>sobre</b><br>o projeto</a></li>
               <li><a href="#casa"><b>sobre</b><br>a casa<br>portuguesa</a></li>
-              <li><a href="#regulamento"><b>baixe</b><br>o regulamento</a></li>
+              <li><a href="#regulamento"><b>leia</b><br>o regulamento</a></li>
               <li><a href="#coletivos"><b>coletivos</b><br>convidados</a></li>
-              <li><a href="#inauguracao"><b>inauguração</b><br>do projeto</a></li>
-              <li><a href="#contato"><b>fale</b><br>conosco</a></li>
+              <li><a href="#"><b>inauguração</b><br>do projeto</a></li>
+              <li><a href="mailto:contato@umacasaportuguesacomcerteza.com"><b>fale</b><br>conosco</a></li>
             </ul>
           </nav>
           <div id="instagram-icon"></div>
@@ -89,10 +89,170 @@
         </p>
       </aside>
       <aside id="regulamento">
+<section>
+  <h1>1. PROJETO</h1>
+  <p>
+    1.1 O presente concurso tem por objetivo convidar fotógrafos amadores e profissionais a produzirem imagens que retratem a casa portuguesa, no Brasil e em Portugal no espírito descrito no parágrafo inicial, através de “smartphones” de qualquer fabricante, utilizando o aplicativo Instagram. Os uploads com a hashtag #umacasaportuguesacomcerteza de fotos no Instagram serão apresentadas (subidas) diariamente, de 19 de setembro de 2012 a 30 de janeiro de 2013, no site do projeto www.umacasaportuguesacomcerteza.com;
+  </p>
+  <p>
+    1.2 Os participantes devem ser residentes no Brasil ou em Portugal;
+  </p>
+  </p>
+  <p>
+    1.3 Para efeito da entrega do prêmio, estão habilitados a participar deste concurso maiores de 18 anos ou menores com autorização expressa dos responsáveis;
+  </p>
+  <p>
+    1.3 O participante deverá ser usuário - ou passar a ser - do Instagram [www.instagram.com] e do Facebook [www.facebook.com];
+  </p>
+  <p>
+    1.4 Os interessados em participar deverão subir no Instagram as imagens com a hashtag #umacasaportuguesacomcerteza. A organização poderá mostrar as mesmas fotografias na funpage do Facebook do projeto;
+  </p>
+  <p>
+    1.5 A primeira ‘postagem’ acontecerá na inauguração do projeto, por ocasião da 22ª edição dos Encontros da Imagem de Braga, no dia 19 de setembro de 2012;
+  </p>
+  <p>
+    1.6 As imagens enviadas serão mediadas para certificação do conteúdo, podendo ser bloqueados usuários que não respeitarem as regras descritas no regulamento;
+  </p>
+  <p>
+    1.7 Os curadores do projeto semanalmente selecionam as imagens que irão participar da ação aparecendo no site do evento. Terão destaque as fotografias com mais ‘Likes’ ou algumas destacadas pela organização;
+  </p>
+  <p>
+    1.8 Serão convidados três coletivos fotográficos para realizar ensaios sobre o tema e estimular a participação do público;
+  </p>
+  <p>
+    1.9 Haverá duas formas de avaliação: júri popular e júri de experts:
+  </p>
+  <p>
+    Júri popular: As fotos serão avaliadas pelo público, e o fotógrafo brasileiro e o fotógrafo português com mais “Likes” no Instagram serão premiados.
+  </p>
+  <p>
+    Júri de experts: Da mesma forma, um brasileiro e um português serão selecionados pela banca de jurados, formada por Milton Guran [FotoRio], Iatã Cannabrava [Paraty em Foco] e Rui Prata [Encontros da Imagem de Braga];
+  </p>
+  <p>
+    1.10  Serão atribuídos 4 [quatro] prêmios, que consistem em uma viagem com estada para o país de não residência, 2 [dois] para brasileiros e 2 [dois] para portugueses, sendo que 2 [dois] ganhadores serão selecionados por júri popular e 2 [dois] por um júri de experts;
+  </p>
+  <p>
+    1.11 Os curadores irão selecionar as 50 fotografias que irão participar das exposições Uma Casa portuguesa com Certeza, intinerantes no Brasil e em Portugal. Esta seleção vai observar os votos populares, mas não está obrigada a, necessariamente, incluir as imagens ganhadoras do voto popular na seleção final a ser exposta;
+  </p>
+  <p>
+    1.12 A exposição acontecerá no Rio de Janeiro e, simultaneamente, em Lisboa, em Portugal e terá uma intinerância em cada país, [Belém do Pará no Brasil e Porto em Portugal];
+  </p>
+  <p>
+    1.13 A organização reserva o direito de alterar estas regras a qualquer momento se isso for inevitável, devido à força maior;
+  </p>
+  <p>
+    1.14 Cronograma: envio de imagens de 19 de setembro a 30 de janeiro e divulgação do resultado dia 30 de fevereiro.
+  </p>
+</section>
+<section>
+<h1>2. REGRAS DO JOGO DA AÇÃO</h1>
+  <p>
+    2.1 Para participar, o candidato deverá obrigatoriamente ter contas no Instagram [www.instagram.com] e no Facebook [www.facebook.com];
+  </p>
+  <p>
+    2.2 Para participar, o candidato deverá curtir a funpage do Facebook do projeto http://www.facebook.com/casaportuguesacomcerteza;
+  </p>
+  <p>
+    2.3 Não serão aceitas imagens de cunho pornográfico, racista ou discriminatório de qualquer espécie;
+  </p>
+  <p>
+    2.4 O proponente deverá formatar sua fotografia obedecendo às exigências do regulamento.
+  </p>
+</section>
+<section>
+  <h1>3. ENVIO DURANTE A AÇÃO</h1>
+  <p>
+    3.1 As imagens deverão ser ‘postadas’ no Instagram com a hashtag #umacasaportuguesacomcerteza de 19 de setembro, por ocasião da inauguração do projeto do 22º  Encontro da Imagem de Braga, em Portugal, até 30 de janeiro de 2013, às 23h59 do horário de Brasília;
+  </p>
+  <p>
+    3.2 Será permitido que o participante adicione outros hashtags além de #umacasaportuguesacomcerteza para eventual busca.
+  </p>
+</section>
+<section>
+  <h1>4. DA SELEÇÃO PARA PRÊMIO</h1>
+  <p>
+    4.1 As fotografias recebidas pelo projeto Uma Casa portuguesa com Certeza passarão por duas etapas de avaliação: Habilitação e Análise;
+  </p>
+  <p>
+    4.1.1 Habilitação
+  </p>
+  <p>
+    A etapa de habilitação, com caráter eliminatório, consistirá na verificação do cumprimento de todas as exigências constantes no regulamento;
+  </p>
+  <p>
+    4.1.2 Análise
+  </p>
+  <p>
+    Juri popular: análise do público através de ‘LIkes’ no Instagram
+  </p>
+  <p>
+    Juri de experts: análise pela comissão de avaliação formada por Milton Guran [FotoRio], Iatã Cannabrava [Paraty em Foco] e Rui Prata [Encontros da Imagem de Braga]. Neste caso, a análise das imagens se dará observando a qualidade e sensibilidade artística do participante e pertinência em relação ao tema.
+  </p>
+</section>
+<section>
+  <h1>5. DA DIVULGAÇÃO DO RESULTADO</h1>
+  <p>
+    5.1 Os nomes dos premiados serão divulgados no dia 30 de fevereiro de 2013, no site www.umacasaportuguesacomcerteza.com;
+  </p>
+  <p>
+    5.2 Os proponentes cujas fotografias forem selecionadas para receber prêmio ou para as exposições receberão comunicados, via e-mail, com instruções para formalização da concordância quanto às condições do procedimento.
+  </p>
+</section>
+<section>
+  <h1>6. DOS PRÊMIOS</h1>
+  <p>
+    6.1 Serão um total de 4 [quatro] prêmios, 2 [dois] com júri popular e 2 [dois] com júri de experts, 2 [dois] para residentes no Brasil e 2 [dois] para residentes em Portugal;
+  </p>
+  <p>
+    6.2 O prêmio consiste em passagem e 3 [três] dias de estádia em Hotel 3 [três] estrelas em país de não residência do ganhador para abertura das exposições;
+  </p>
+  <p>
+    6.3 Os prêmios não são transferíveis.
+  </p>
+</section>
+<section>
+  <h1>7. DAS EXPOSIÇÕES</h1>
+  <p>
+    7.1 A primeira exposição no Brasil acontece simultânea a exposição em Portugal;
+  </p>
+  <p>
+    7.2 Os participantes selecionados para exposição serão contatados pela produção. Caso necessário, será solicitado o envio de imagem original, em até cinco dias úteis. Caso a imagem não seja enviada ou o selecionado não seja encontrado, ele será substituído;
+  </p>
+  <p>
+    7.3 A produção do projeto é responsável pela impressão, transporte, montagem, desmontagem, sinalização e divulgação das exposições;
+  </p>
+  <p>
+    7.4 A organização não se responsabiliza por candidatos que não possuem plena autoria das obras a serem expostas. De forma que é dever do participante ter a autorização de terceiros que, por ventura, tenham direitos conexos sobre a produção apresentada, se responsabilizando, inclusive, por eventuais reivindicações de terceiros quanto ao uso não autorizado;
+  </p>
+  <p>
+    7.5 Em fotos selecionadas que identificam indivíduos, o participante deve ter o consentimento específico de tais pessoas para expor a fotografia em questão. Em caso de menores, o participante deve ter o consentimento expresso dos pais ou responsáveis. Os organizadores do concurso não assumirão responsabilidades para o fracasso do participante desta obrigação;
+  </p>
+  <p>
+    7.6 Pela adesão ao presente concurso, o candidato inscrito, que venha a ser selecionado para exposição, autoriza a organização do evento a utilizar suas imagens em mídia impressa ou eletrônica, exclusivamente para divulgação do projeto;
+  </p>
+  <p>
+    7.7 As imagens selecionadas para exposição não serão objeto de utilização comercial de qualquer tipo.
+  </p>
+</section>
+<section>
+  <h1>8. DAS DISPOSIÇÕES GERAIS</h1>
+  <p>
+    8.1 A visitação das exposições do projeto Uma Casa portuguesa com Certeza será gratuita;
+  </p>
+  <p>
+    8.2 As dúvidas poderão ser encaminhadas exclusivamente para o e-mail contato@umacasaportuguesacomcerteza.com;
+  </p>
+  <p>
+    8.3 O ato da inscrição implica em plena concordância com os termos aqui estabelecidos;
+  </p>
+  <p>
+    8.4 Os casos omissos serão avaliados pela curadoria do projeto.
+  </p>
+</section>
       </aside>
       <aside id="coletivos" class="vcard">
         <section>
-          <img class="foto" src="img/instagram.png" />
+          <img class="foto" src="img/coletivo_pangeia_de_dois.jpg" />
           <div class="content">
             <h1>Pangéia de dois</h1>
             <h2 class="adr"><span class="region">SP</span> - <span class="country">Brasil</span></h1>
