Ajustes conteúdo tab Coletivos.

--- a/index.html
+++ b/index.html
@@ -266,23 +266,20 @@
           </div>
         </section>
         <section>
-          <div class="foto"></div>
+          <img class="foto" src="img/coletivo_o_estendal.jpg" />
           <div class="content">
             <h1>O Estendal</h1>
             <h2>RJ - Brasil</h2>
             <p>
-              O Estendal é uma ação cultural promovida por um grupo de fazedores de imagens, mais convidados e agregados, que visa levar para as ruas e praças públicas imagens pensantes ou pensamentos imagéticos.
+              O Estendal é um coletivo carioca formado por artistas e fotógrafos que tem em comum o desejo de levar fotografia/ arte para as ruas. Nesta época de massificação da imagem a intenção é democratizar a fotografia propondo ações que dialoguem com a população em geral. Desenvolvendo assim o interesse pela arte.
             </p>
             <p>
-              Como que brincando de fazer arte, o grupo parte de uma expressão da língua portuguesa para fotografar, ou rebuscar em arquivos, imagens que traduzam o tema de alguma maneira bastante própria e individual.
-            </p>
-            <p>
-              As ideias são literalmente penduradas em varais esticados em espaços de convivência, expostos ao sabor do vento e da degustação dos olhares curiosos de transeuntes afoitos, como um descanso na loucura estressante diária das ruas de grandes cidades.
+              O coletivo vem trabalhando desde 2010, e já promoveu ações em Lisboa, Rio de Janeiro, Sã o Paulo, Curitiba, Tiradentes, São João Del Rey e Juiz de Fora.
             </p>
           </div>
         </section>
         <section>
-          <div class="foto"></div>
+          <img class="foto" src="img/coletivo_kameraphoto.jpg" />
           <div class="content">
             <h1>Kameraphoto</h1>
             <h2>Portugal</h2>
