Link para download do PDF

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           O projeto Uma Casa portuguesa com Certeza foi concebido especialmente para o Ano do Brasil em Portugal e será uma homenagem de brasileiros e portugueses a Portugal! A proposta é produzir correspondências visuais entre fotógrafos brasileiros e portugueses com o tema da 'casa portuguesa'. O projeto soma um Concurso fotográfico e exposições.
         </p>
         <p>
-          A participação está aberta a todos os fotógrafos amadores e profissionais que queiram participar, basta ser usuário - ou passar a ser - do Instagram, seguir as regras do jogo e participar do processo de seleção. Serão aceitos participantes residentes no Brasil e em Portugal. Leia ou baixe o regulamento para saber mais.
+          A participação está aberta a todos os fotógrafos amadores e profissionais que queiram participar, basta ser usuário - ou passar a ser - do Instagram, seguir as regras do jogo e participar do processo de seleção. Serão aceitos participantes residentes no Brasil e em Portugal. Leia ou <a href="./downloads/Regulamento_Uma_Casa_Portuguesa_com_Certeza.pdf">baixe o regulamento</a> para saber mais.
         </p>
       </aside>
       <aside id="casa">
@@ -94,6 +94,11 @@
       </aside>
       <aside id="regulamento">
 <section>
+	<h1><a href="./downloads/Regulamento_Uma_Casa_Portuguesa_com_Certeza.pdf">0. Baixe o Regulamento</a></h1>
+  <p>
+    <a href="./downloads/Regulamento_Uma_Casa_Portuguesa_com_Certeza.pdf">Clique aqui</a> e baixe o regulamento para guardar, imprimir ou ler mais tarde.
+  </p>
+  <p>
   <h1>1. Projeto</h1>
   <p>
     1.1 O presente concurso tem por objetivo convidar fotógrafos amadores e profissionais a produzirem imagens que retratem a casa portuguesa, no Brasil e em Portugal no espírito descrito no parágrafo inicial, através de “smartphones” de qualquer fabricante, utilizando o aplicativo Instagram. Os uploads com a hashtag #umacasaportuguesacomcerteza de fotos no Instagram serão apresentadas (subidas) diariamente, de 19 de setembro de 2012 a 30 de janeiro de 2013, no site do projeto www.umacasaportuguesacomcerteza.com;
