bordas arredondadas no IE8

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       </div>
       <aside id="share">
         <ul>
-          <li><a href="#">facebook</a></li>
-          <li><a href="#">twitter</a></li>
+          <li class="facebook"><a href="#">facebook</a></li>
+          <li class="twitter"><a href="#">twitter</a></li>
         </ul>
       </aside>
       <aside id="projeto">
