primeira versao do balao-popup verde da home

--- a/index.html
+++ b/index.html
@@ -65,15 +65,19 @@
             <p class="bottom-text">horas</p>
           </div>
         </div>
-        <h2>Como é sua imagem de uma casa portuguesa?</h2>
-        <p>
-          Fotografe com o Instagram e use a tag
-          <span class="tag green">#umacasaportuguesacomcerteza</span> ou
-          <span class="tag red">#casalusa</span> e participe.<br>
-          Sua fotografia pode ser selecionada para participar das exposições e/ou
-          ser premiada.
-        </p>
       </div> <!-- main -->
+      <aside id="message-popup">
+        <h1>Qual é a sua imagem de uma casa portuguesa?</h1>
+        <h2>
+          Fotografe com o Instagram e use a tag
+          <span class="tag">#umacasaportuguesacomcerteza</span> ou
+          <span class="tag">#casalusa</span> e participe. Sua fotografia
+          pode ser selecionada para participar das exposições e/ou ser premiada.
+        </h2>
+        <p>
+          De 19 de Setembro de 2012 até 30 de Janeiro de 2013.
+        </p>
+      </aside>
       <aside id="share">
         <ul>
           <li class="facebook"><a href="#">facebook</a></li>
