--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
           </div>
         </div>
       </div> <!-- main -->
-      <aside id="message-popup">
+      <aside id="popup-opener" class="under closed">
+        <p>
+          <a href="#">Qual é a sua imagem de uma casa portuguesa?</a><i class="caret"></i>
+        </p>
+      </aside>
+      <aside id="message-popup" class="under closed">
         <h1>Qual é a sua imagem de uma casa portuguesa?</h1>
         <h2>
           Fotografe com o Instagram e use a tag
@@ -77,6 +82,7 @@
         <p>
           De 19 de Setembro de 2012 até 30 de Janeiro de 2013.
         </p>
+        <p class="close-button"><a href="#">fechar</a></p>
       </aside>
       <aside id="share">
         <ul>
