Ajustei o texto, largura e posição dos balões verdes.

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <div id="popups">
         <aside id="popup-opener" class="closed">
           <p>
-            <a href="#">Qual é a sua imagem de uma casa portuguesa?<i class="caret"></i></a>
+            <a href="#">Qual é a sua imagem da casa portuguesa?<i class="caret"></i></a>
           </p>
         </aside>
         <aside id="message-popup" class="closed">
-          <h1>Qual é a sua imagem de uma casa portuguesa?</h1>
+          <h1>Qual é a sua imagem<br>da casa portuguesa?</h1>
           <h2>
             Fotografe com o Instagram e use a tag
             <span class="tag">#umacasaportuguesacomcerteza</span> ou
