frase marota debaixo do contador e x um pouco para lá

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <p class="bottom-text">horas</p>
           </div>
         </div>
+        <h2>para você começar a postar suas fotos no Instagram.</h2>
       </div> <!-- main -->
       <div id="popups">
         <aside id="popup-opener" class="closed">
