--- a/promo-fake.html
+++ b/promo-fake.html
@@ -13,7 +13,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?v=1345764311310">
     <script src="js/vendor/modernizr-2.6.1.min.js"></script>
     <script type="text/javascript" src="js/vendor/live.js"></script>
     <script>
@@ -279,7 +279,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=1345764311310"></script>
 
   </body>
 </html>
