Incluí link para Vimeo. Alterei texto do box verde (parte final). NÃO CONFERI NOS IEs.

--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
             pode ser selecionada para participar das exposições e/ou ser premiada.
           </h2>
           <p>
-            De 20 de Setembro de 2012 até 30 de Janeiro de 2013.
+            Comece a fotografar e postar já.<br>A partir de 20 de Setembro suas fotos estarão aqui.
           </p>
           <p class="close-button"><a href="#">fechar</a></p>
         </aside>
         <aside id="share">
           <ul>
             <li class="facebook"><a href="https://www.facebook.com/umacasaportuguesacomcerteza" target="_blank">facebook</a></li>
+            <li class="vimeo"><a href="http://vimeo.com/casaportuguesacomcerteza" target="_blank">vimeo</a></li>
             <li class="twitter"><a href="https://twitter.com/umacasalusa" target="_blank">twitter</a></li>
           </ul>
         </aside>
