--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
           <p>
             A participação está aberta a todos os fotógrafos amadores e profissionais que queiram participar, basta ser usuário - ou passar a ser - do Instagram, seguir as regras do jogo e participar do processo de seleção. Serão aceitos participantes residentes no Brasil e em Portugal. Leia ou <a href="./downloads/Regulamento_Uma_Casa_Portuguesa_com_Certeza.pdf">baixe o regulamento</a> para saber mais.
           </p>
-					<p>
+					<p class="menor">
 					Curadoria: Iatã Cannabrava e Milton Guran<br>
 					Produção executiva: Helena Ruschel<br>
 					Logotipo: Elohim Barros<br>
-					Site: Mauricio e Fabricio Zuardi<br>
+					Site: Helena Ruschel, Mauricio e Fabricio Zuardi<br>
 					Vinheta: Doca e Vana
 					</p>
         </aside>
@@ -228,17 +228,16 @@
           </section>
         </aside>
         <aside id="coletivos" class="vcard">
+					<h3>Foram convidados três Coletivos fotográficos para participar do projeto, durante o período do Concurso, eles também estarão fotografando com Instagram e estimulando o nosso olhar.</h3>
           <section>
             <img class="foto" src="img/coletivo_kameraphoto.jpg" />
             <div class="content">
               <h1>Kameraphoto</h1>
               <h2>Portugal</h2>
               <p>
-                [kameraphoto] é um coletivo de fotógrafos fundado em Janeiro de 2003. It is a structure that brings together different visions of the contemporary Portuguese photography, committed to the creation and production of collective projects. The collective also encourages its members to develop personal projects. The commitment put into collective productions as well as into individual ones makes [kameraphoto] a critical space promoting photography that allows the structure to be diverse in its visions and perceptions of the world as well as in the many forms of expression through photographic means.
+                A [kameraphoto] é um colectivo de fotógrafos fundado em Janeiro de 2003. É uma estrutura agregadora de diferentes olhares da fotografia contemporânea portuguesa, comprometida com a criação e realização de projectos colectivos. O colectivo incentiva, igualmente, os seus membros a realizar projectos pessoais. O empenho dedicado a produções colectivas bem como a individuais torna a [kameraphoto] num espaço crítico de promoção da fotografia que permite à estrutura ser eclética nas suas visões e percepções do mundo, bem como nas diversas formas expressas através do suporte fotográfico.
               </p>
-              <p>
-                Alexandre Almeida, Augusto Brázio, Céu Guarda, Guillaume Pazat, João Pina, Jordi Burch, Martim Ramos, Nelson d'Aires, Pauliana Valente Pimentel, Pedro Letria, Sandra Rocha e Valter Vinagre.
-              </p>
+							<p>O colectivo conta actualmente com 12 membros: Alexandre Almeida, Augusto Brázio, Céu Guarda, Guillaume Pazat, João Pina, Jordi Burch, Martim Ramos, Nelson d'Aires, Pauliana Valente Pimentel, Pedro Letria, Sandra Rocha e Valter Vinagre.</p>
             </div>
           </section>
           <section>
