--- a/index.html
+++ b/index.html
@@ -120,111 +120,61 @@
               <a href="./downloads/Regulamento_Uma_Casa_Portuguesa_com_Certeza.pdf">Clique aqui</a> e baixe o regulamento para guardar, imprimir ou ler mais tarde.
             </p>
 							<h1>REGULAMENTO</h1>
-							<p>Tomando por tema um dos aspectos da cultura portuguesa mais marcados no imaginário brasileiro, imortalizado pelo 
-							cancioneiro popular: a casa portuguesa, a proposta deste projeto é produzir uma correspondência visual entre 
-							fotógrafos brasileiros e portugueses.</p>
-							<p>A dita casa portuguesa, naturalmente, vem se reinventando continuamente, seja por estar no Brasil seja por estar em 
-							Portugal, mas guarda uma certa matriz que, temos certeza, servirá como o condutor da identidade portuguesa. A casa 
-							portuguesa, tomada como tema, pode ser vista de dentro, de fora, e também situada no seu entorno. O que buscamos 
-							é estimular uma percepção e/ou uma reflexão sobre o que seria esta casa no imaginário de portugueses e de 
-							brasileiros.</p>
+							<p>Tomando por tema um dos aspectos da cultura portuguesa mais marcados no imaginário brasileiro, imortalizado pelo cancioneiro popular: a casa portuguesa, a proposta deste projeto é produzir uma correspondência visual entre fotógrafos brasileiros e portugueses.</p>
+							<p>A dita casa portuguesa, naturalmente, vem se reinventando continuamente, seja por estar no Brasil seja por estar em Portugal, mas guarda uma certa matriz que, temos certeza, servirá como o condutor da identidade portuguesa. A casa portuguesa, tomada como tema, pode ser vista de dentro, de fora, e também situada no seu entorno. O que buscamos é estimular uma percepção e/ou uma reflexão sobre o que seria esta casa no imaginário de portugueses e de brasileiros.</p>
 							<h1>1. PROJETO</h1>
-							<p>1.1 O presente concurso tem por objetivo convidar fotógrafos amadores e profissionais a produzirem imagens que 
-							retratem a casa portuguesa, no Brasil e em Portugal no espírito descrito no parágrafo inicial, através de “smartphones” 
-							de qualquer fabricante, utilizando o aplicativo Instagram. Os uploads com a tag #umacasaportuguesacomcerteza
-							ou #casalusa de fotos no Instagram serão apresentadas diariamente, de 20 de setembro de 2012 a 30 de janeiro de 
-							2013, no site do projeto www.umacasaportuguesacomcerteza.com;</p>
+							<p>1.1 O presente concurso tem por objetivo convidar fotógrafos amadores e profissionais a produzirem imagens que retratem a casa portuguesa, no Brasil e em Portugal no espírito descrito no parágrafo inicial, através de “smartphones” de qualquer fabricante, utilizando o aplicativo Instagram. Os uploads com a tag #umacasaportuguesacomcerteza ou #casalusa de fotos no Instagram serão apresentadas diariamente, de 20 de setembro de 2012 a 30 de janeiro de 2013, no site do projeto www.umacasaportuguesacomcerteza.com;</p>
 							<p>1.2 Os participantes devem ser residentes no Brasil ou em Portugal;</p>
-							<p>1.3 Para efeito da entrega do prêmio, estão habilitados a participar deste concurso maiores de 18 anos ou menores 
-							com autorização expressa dos responsáveis;</p>
-							<p>1.4 O participante deverá ser usuário - ou passar a ser - do Instagram [www.instagram.com] e 
-							do Facebook [www.facebook.com];</p>
-							<p>1.5 Os interessados em participar deverão subir no Instagram as imagens com a hashtag 
-							#umacasaportuguesacomcerteza. A organização poderá mostrar as mesmas fotografias na funpage do Facebook do 
-							projeto;</p>
-							<p>1.6 A primeira ʻpostagemʼ acontecerá na inauguração do projeto, por ocasião da 22ª edição dos Encontros da Imagem 
-							de Braga, no dia 20 de setembro de 2012;</p>
-							<p>1.7 As imagens enviadas serão mediadas para certificação do conteúdo, podendo ser bloqueados usuários que não 
-							respeitarem as regras descritas no regulamento;</p>
-							<p>1.8 Os curadores do projeto semanalmente selecionam as imagens que irão participar da ação aparecendo no site do 
-							evento. Terão destaque as fotografias com mais ʻLikesʼ ou algumas destacadas pela organização;</p>
-							<p>1.9 Serão convidados três coletivos fotográficos para realizar ensaios sobre o tema e estimular a participação do 
-							público;1.10 Haverá duas formas de avaliação: júri popular e júri de experts:</p>
-							<p>Júri popular: As fotos serão avaliadas pelo público, e o fotógrafo brasileiro e o fotógrafo português com mais “Likes” no 
-							Instagram serão premiados.</p>
-							<p>Júri de experts: Da mesma forma, um brasileiro e um português serão selecionados pela banca de jurados, formada por 
-							Milton Guran [FotoRio], Iatã Cannabrava [Paraty em Foco] e Ângela Ferreira e Rui Prata [Encontros da Imagem de 
-							Braga] e coordenado pelo Comissário geral do Ano do Brasil em Portugal;</p>
-							<p>1.11 Serão atribuídos 4 [quatro] prêmios, que consistem em uma viagem com estada para o país de não residência, 2 
-							[dois] para brasileiros e 2 [dois] para portugueses, sendo que 2 [dois] ganhadores serão selecionados por júri popular e 
-							2 [dois] por um júri de experts;</p>
-							<p>1.12 Os curadores irão selecionar as 50 fotografias que irão participar das exposições Uma Casa portuguesa com 
-							Certeza, intinerantes no Brasil e em Portugal. Esta seleção vai observar os votos populares, mas não está obrigada a,
-							necessariamente, incluir as imagens ganhadoras do voto popular na seleção final a ser exposta;</p>
+							<p>1.3 Para efeito da entrega do prêmio, estão habilitados a participar deste concurso maiores de 18 anos ou menores com autorização expressa dos responsáveis;</p>
+							<p>1.4 O participante deverá ser usuário - ou passar a ser - do Instagram [www.instagram.com] e do Facebook [www.facebook.com];</p>
+							<p>1.5 Os interessados em participar deverão subir no Instagram as imagens com a hashtag #umacasaportuguesacomcerteza. A organização poderá mostrar as mesmas fotografias na funpage do Facebook do projeto;</p>
+							<p>1.6 A primeira ʻpostagemʼ acontecerá na inauguração do projeto, por ocasião da 22a edição dos Encontros da Imagem de Braga, no dia 20 de setembro de 2012;</p>
+							<p>1.7 As imagens enviadas serão mediadas para certificação do conteúdo, podendo ser bloqueados usuários que não respeitarem as regras descritas no regulamento;</p>
+							<p>1.8 Os curadores do projeto semanalmente selecionam as imagens que irão participar da ação aparecendo no site do evento. Terão destaque as fotografias com mais ʻLikesʼ ou algumas destacadas pela organização;</p>
+							<p>1.9 Serão convidados três coletivos fotográficos para realizar ensaios sobre o tema e estimular a participação do público;</p>
+							<p>1.10 Haverá duas formas de avaliação: júri popular e júri de experts:</p>
+							<p>Júri popular: As fotos serão avaliadas pelo público, e o fotógrafo brasileiro e o fotógrafo português com mais “Likes” no Instagram serão premiados.</p>
+							<p>Júri de experts: Da mesma forma, um brasileiro e um português serão selecionados pela banca de jurados, formada por Milton Guran [FotoRio], Iatã Cannabrava [Paraty em Foco] e Ângela Ferreira e Rui Prata [Encontros da Imagem de Braga] e coordenado pelo Comissário geral do Ano do Brasil em Portugal;</p>
+							<p>1.11 Serão atribuídos 4 [quatro] prêmios, que consistem em uma viagem com estada para o país de não residência, 2 [dois] para brasileiros e 2 [dois] para portugueses, sendo que 2 [dois] ganhadores serão selecionados por júri popular e 2 [dois] por um júri de experts;</p>
+							<p>1.12 Os curadores irão selecionar as 50 fotografias que irão participar das exposições Uma Casa portuguesa com Certeza, intinerantes no Brasil e em Portugal. Esta seleção vai observar os votos populares, mas não está obrigada a, necessariamente, incluir as imagens ganhadoras do voto popular na seleção final a ser exposta;</p>
 							<p>1.13 A exposição acontecerá no Brasil e, simultaneamente, em Portugal e terá uma intinerância em cada país;</p>
-							<p>1.14 A organização reserva o direito de alterar estas regras a qualquer momento se isso for inevitável, devido à força 
-							maior;</p>
-							<p>1.15 Cronograma: envio de imagens de 20 de setembro a 30 de janeiro e divulgação do resultado dia 30 de 
-							fevereiro.</p>
+							<p>1.14 A organização reserva o direito de alterar estas regras a qualquer momento se isso for inevitável, devido à força maior;</p>
+							<p>1.15 Cronograma: envio de imagens de 20 de setembro a 30 de janeiro e divulgação do resultado dia 28 de fevereiro.</p>
 							<h1>2. REGRAS DO JOGO DA AÇÃO</h1>
-							<p>2.1 Para participar, o candidato deverá obrigatoriamente ter contas no Instagram [www.instagram.com] e no Facebook
-							[www.facebook.com];</p>
-							<p>2.2 Para participar, o candidato deverá curtir a funpage do Facebook do 
-							projeto http://www.facebook.com/casaportuguesacomcerteza;</p>
+							<p>2.1 Para participar, o candidato deverá obrigatoriamente ter contas no Instagram [www.instagram.com] e no Facebook [www.facebook.com];</p>
+							<p>2.2 Para participar, o candidato deverá curtir a funpage do Facebook do projeto http://www.facebook.com/casaportuguesacomcerteza;</p>
 							<p>2.3 Não serão aceitas imagens de cunho pornográfico, racista ou discriminatório de qualquer espécie;</p>
 							<p>2.4 O proponente deverá formatar sua fotografia obedecendo às exigências do regulamento.</p>
 							<h1>3. ENVIO DURANTE A AÇÃO</h1>
-							<p>3.1 As imagens deverão ser ʻpostadasʼ no Instagram com a hashtag #umacasaportuguesacomcerteza ou #casalusa
-							de 20 de setembro até 30 de janeiro de 2013, às 23h59 do horário de Brasília;</p>
-							<p>3.2 Será permitido que o participante adicione outros hashtags além de #umacasaportuguesacomcerteza
-							ou #casalusa para eventual busca.</p>
+							<p>3.1 As imagens deverão ser ʻpostadasʼ no Instagram com a hashtag #umacasaportuguesacomcerteza ou #casalusa de 20 de setembro até 30 de janeiro de 2013, às 23h59 do horário de Brasília;</p>
+							<p>3.2 Será permitido que o participante adicione outros hashtags além de #umacasaportuguesacomcerteza ou #casalusa para eventual busca.</p>
 							<h1>4. DA SELEÇÃO PARA PRÊMIO</h1>
-							<p>4.1 As fotografias recebidas pelo projeto Uma Casa portuguesa com Certeza passarão por duas etapas de avaliação: 
-							Habilitação e Análise;4.1.1 Habilitação
-							A etapa de habilitação, com caráter eliminatório, consistirá na verificação do cumprimento de todas as exigências 
-							constantes no regulamento;</p>
+							<p>4.1 As fotografias recebidas pelo projeto Uma Casa portuguesa com Certeza passarão por duas etapas de avaliação: Habilitação e Análise;</p>
+							<p>4.1.1 Habilitação</p>
+							<p>A etapa de habilitação, com caráter eliminatório, consistirá na verificação do cumprimento de todas as exigências constantes no regulamento;</p>
 							<p>4.1.2 Análise</p>
 							<p>Juri popular: análise do público através de ʻLIkesʼ no Instagram</p>
-							<p>Juri de experts: análise pela comissão de avaliação formada por Milton Guran [FotoRio], Iatã Cannabrava [Paraty em 
-							Foco] e Ângela Ferreira e Rui Prata [Encontros da Imagem de Braga] e coordenado pelo Comissário geral do Ano do 
-							Brasil em Portugal. Neste caso, a análise das imagens se dará observando a qualidade e sensibilidade artística do 
-							participante e pertinência em relação ao tema.</p>
+							<p>Juri de experts: análise pela comissão de avaliação formada por Milton Guran [FotoRio], Iatã Cannabrava [Paraty em Foco] e Ângela Ferreira e Rui Prata [Encontros da Imagem de Braga] e coordenado pelo Comissário geral do Ano do Brasil em Portugal. Neste caso, a análise das imagens se dará observando a qualidade e sensibilidade artística do participante e pertinência em relação ao tema.</p>
+							 
 							<h1>5. DA DIVULGAÇÃO DO RESULTADO</h1>
-							<p>5.1 Os nomes dos premiados serão divulgados no dia 28 de fevereiro de 2013, no 
-							site www.umacasaportuguesacomcerteza.com;</p> 
-							<p>5.2 Os proponentes cujas fotografias forem selecionadas para receber prêmio ou para as exposições receberão 
-							comunicados, via e-mail, com instruções para formalização da concordância quanto às condições do procedimento.</p>
+							<p>5.1 Os nomes dos premiados serão divulgados no dia 28 de fevereiro de 2013, no site www.umacasaportuguesacomcerteza.com;</p>
+							<p>5.2 Os proponentes cujas fotografias forem selecionadas para receber prêmio ou para as exposições receberão comunicados, via e-mail, com instruções para formalização da concordância quanto às condições do procedimento.</p>
 							<h1>6. DOS PRÊMIOS</h1>
-							<p>6.1 Serão um total de 4 [quatro] prêmios, 2 [dois] com júri popular e 2 [dois] com júri de experts, 2 [dois] para residentes 
-							no Brasil e 2 [dois] para residentes em Portugal;</p>
-							<p>6.2 O prêmio consiste em passagem e 3 [três] dias de estádia em Hotel 3 [três] estrelas em país de não residência do 
-							ganhador para abertura das exposições;</p>
+							<p>6.1 Serão um total de 4 [quatro] prêmios, 2 [dois] com júri popular e 2 [dois] com júri de experts, 2 [dois] para residentes no Brasil e 2 [dois] para residentes em Portugal;</p>
+							<p>6.2 O prêmio consiste em passagem e 3 [três] dias de estádia em Hotel 3 [três] estrelas em país de não residência do ganhador para abertura das exposições;</p>
 							<p>6.3 Os prêmios não são transferíveis.</p>
 							<h1>7. DAS EXPOSIÇÕES</h1>
 							<p>7.1 A primeira exposição no Brasil acontece simultânea a exposição em Portugal;</p>
-							<p>7.2 Os participantes selecionados para exposição serão contatados pela produção. Caso necessário, será solicitado o 
-							envio de imagem original, em até cinco dias úteis. Caso a imagem não seja enviada ou o selecionado não seja 
-							encontrado, ele será substituído;</p>
-							<p>7.3 A produção do projeto é responsável pela impressão, transporte, montagem, desmontagem, sinalização e 
-							divulgação das exposições;</p>
-							<p>7.4 A organização não se responsabiliza por candidatos que não possuem plena autoria das obras a serem expostas. 
-							De forma que é dever do participante ter a autorização de terceiros que, por ventura, tenham direitos conexos sobre a 
-							produção apresentada, se responsabilizando, inclusive, por eventuais reivindicações de terceiros quanto ao uso não 
-							autorizado;</p>
-							<p>7.5 Em fotos selecionadas que identificam indivíduos, o participante deve ter o consentimento específico de tais 
-							pessoas para expor a fotografia em questão. Em caso de menores, o participante deve ter o consentimento expresso 
-							dos pais ou responsáveis. Os organizadores do concurso não assumirão responsabilidades para o fracasso do 
-							participante desta obrigação;</p>
-							<p>7.6 Pela adesão ao presente concurso, o candidato inscrito, que venha a ser selecionado para exposição, autoriza a 
-							organização do evento a utilizar suas imagens em mídia impressa ou eletrônica, exclusivamente para divulgação do 
-							projeto;</p>
+							<p>7.2 Os participantes selecionados para exposição serão contatados pela produção. Caso necessário, será solicitado o envio de imagem original, em até cinco dias úteis. Caso a imagem não seja enviada ou o selecionado não seja encontrado, ele será substituído;</p>
+							<p>7.3 A produção do projeto é responsável pela impressão, transporte, montagem, desmontagem, sinalização e divulgação das exposições;</p>
+							<p>7.4 A organização não se responsabiliza por candidatos que não possuem plena autoria das obras a serem expostas. De forma que é dever do participante ter a autorização de terceiros que, por ventura, tenham direitos conexos sobre a produção apresentada, se responsabilizando, inclusive, por eventuais reivindicações de terceiros quanto ao uso não autorizado;</p>
+							<p>7.5 Em fotos selecionadas que identificam indivíduos, o participante deve ter o consentimento específico de tais pessoas para expor a fotografia em questão. Em caso de menores, o participante deve ter o consentimento expresso dos pais ou responsáveis. Os organizadores do concurso não assumirão responsabilidades para o fracasso do participante desta obrigação;</p>
+							<p>7.6 Pela adesão ao presente concurso, o candidato inscrito, que venha a ser selecionado para exposição, autoriza a organização do evento a utilizar suas imagens em mídia impressa ou eletrônica, exclusivamente para divulgação do projeto;</p>
 							<p>7.7 As imagens selecionadas para exposição não serão objeto de utilização comercial de qualquer tipo.</p>
 							<h1>8. DAS DISPOSIÇÕES GERAIS</h1>
 							<p>8.1 A visitação das exposições do projeto Uma Casa portuguesa com Certeza será gratuita;</p>
-							<p>8.2 As dúvidas poderão ser encaminhadas exclusivamente para o e-mail
-							contato@umacasaportuguesacomcerteza.com;</p>
-							<p>8.3 O ato da inscrição implica em plena concordância com os termos aqui estabelecidos;</p>
-							<p>8.4 Os casos omissos serão avaliados pela curadoria do projeto.</p>
+							<p>8.2 As dúvidas poderão ser encaminhadas exclusivamente para o  e-mail contato@umacasaportuguesacomcerteza.com;</p>
+							<p>8.3 O ato da inscrição implica em plena concordância com os termos aqui estabelecidos; 8.4 Os casos omissos serão avaliados pela curadoria do projeto.</p>
           </section>
         </aside>
         <aside id="coletivos" class="vcard">
