Balloon Inauguração - ainda precisa limitar script de fechar o balão para não afetar os links.

--- a/index.html
+++ b/index.html
@@ -214,19 +214,12 @@
           </section>
         </aside>
         <aside id="inauguracao">
-          <p>
-            O projeto Uma Casa portuguesa com Certeza foi concebido especialmente para o Ano do Brasil em Portugal e será uma homenagem de brasileiros e portugueses a Portugal! A proposta é produzir correspondências visuais entre fotógrafos brasileiros e portugueses com o tema da 'casa portuguesa'. O projeto soma um Concurso fotográfico e exposições.
-          </p>
-          <p>
-            A participação está aberta a todos os fotógrafos amadores e profissionais que queiram participar, basta ser usuário - ou passar a ser - do Instagram, seguir as regras do jogo e participar do processo de seleção. Serão aceitos participantes residentes no Brasil e em Portugal. Leia ou <a href="./downloads/Regulamento_Uma_Casa_Portuguesa_com_Certeza.pdf">baixe o regulamento</a> para saber mais.
-          </p>
-          <p class="menor">
-          Curadoria: Iatã Cannabrava e Milton Guran<br>
-          Produção executiva: Helena Ruschel<br>
-          Logotipo: Elohim Barros<br>
-          Site: Helena Ruschel, Mauricio e Fabricio Zuardi<br>
-          Vinheta: Doca e Vana
-          </p>
+					<p>O projeto estará presente, entre os dias 26 e 30 de setembro, no Festival Internacional - Partay em Foco  [<a href="http://www.paratyemfoco.com" target="_blank">www.paratyemfoco.com</a>] em duas ações, ambas contidas em grandes conteiners estacionados ao lado da Praça Matriz, em Paraty.</p>
+					<p>O primeiro conteiner vai apresentar o trabalho de Ana Lúcia Mariz _ O que Paulo Reis me ensinou, uma exposição que faz referência a casa lusa</p>
+					<p>O segundo conteineir abriga uma estação de trabalho e impressão fotográfica. Durante todo o Festival a estação estará em atividade, imprimindo e montado uma exposição dentro do conteiner, com os Instagrams enviados para projeto Uma Casa portuguesa com Certeza através do #casalusa ou #umacasaportuguesacomcerteza.</p>
+					<p>A inauguração do projeto acontecerá por ocasião da 22ª edição dos Encontros da Imagem de Braga [<a href="http://www.encontrosdaimagem.com" target="_blank">www.encontrosdaimagem.com</a>], no dia 20 de setembro de 2012, as 11 horas no Espaço Emergentes DST, Rua do Raio 175, Braga. As primeiras ‘postagens’ serão feitas pelo presidente da Funarte, Antonio Grassi. Também estarão presentes na inauguração, Milton Guran, curador do projeto e Rui Prata e Ângela Ferreira responsáveis pelo Encontros da Imagem de Braga.</p>
+					<a href="http://www.encontrosdaimagem.com" target="_blank"><img class="logo-esq" src="img/logo_encontros-da-imagem.png" /></a>
+					<a href="http://www.paratyemfoco.com" target="_blank"><img class="logo-dir" src="img/logo_paraty-em-foco.png" /></a>
         </aside>
 
       </div> <!-- popups -->
