contador muda o texto e fica dando refresh a cada 10 segundos quando chegar em 0

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css?v=1345764311310">
     <script src="js/vendor/modernizr-2.6.1.min.js"></script>
+    <!--
     <script type="text/javascript" src="js/vendor/live.js"></script>
+  -->
     <script>
-      //PHP should fill this value
-      // var miliseconds_left = 2376187783;
+       // var miliseconds_left = 0;
     </script>
   </head>
   <body>
@@ -64,7 +65,7 @@
             <p class="bottom-text">horas</p>
           </div>
         </div>
-        <h2>para você ver aqui as fotos postadas com nossas tags no Instagram</h2>
+        <h2 id="counter-msg">para você ver aqui as fotos postadas com nossas tags no Instagram</h2>
       </div> <!-- main -->
       <div id="popups">
         <aside id="popup-opener" class="closed">
